--- a/config/sensors_3d.yaml
+++ b/config/sensors_3d.yaml
@@ -9,3 +9,4 @@ default_sensor:
   point_cloud_topic: /camera/points
   point_subsample: 1
   sensor_plugin: occupancy_map_monitor/PointCloudOctomapUpdater
+  octomap_resolution: 0.02
